# esp32-wifi-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml
components/wifi_manager/: CMakeLists.txt  Kconfig.projbuild  wifi_manager.cc  wifi_manager.h
components/wifi_manager/html/: code.js  index.html
components/wifi_manager/servers/: http_app.cc
components/wifi_manager/utils/: mdns_settings.cc  mdns_settings.h
examples/default_demo/: CMakeLists.txt
main/: CMakeLists.txt  hello_world_server.cc  hello_world_server.h  idf_component.yml  user_main.c
main/include/: http_app.cc  index.html  wifi_manager.cc
main/wifi_manager/: wifi_manager.cc  wifi_manager.h
main/wifi_manager/html/: code.js  index.html  style.css
main/wifi_manager/servers/: dns_server.cc  http_app.cc
